Iniciando a implementação do método buscaPorAreaAvaliacao.

--- a/src/main/resources/regex.properties
+++ b/src/main/resources/regex.properties
@@ -1,2 +1,6 @@
-regex.tab=\\t+
+regex.tab1=\\t+
+regex.tab2=[ ]+<
 regex.newline=\\n+
+regex.areaAvaliacao.divResultado=<div class=\"resultados\">.*</div>
+regex.areaAvaliacao.table=<table class="table table-striped table-bordered" style="border-top: 0;">.*</table>
+regex.areaAvaliacao.tbody=<tbody>.*</tbody>
