Implementando o método buscarPorAreaAvaliacao.

--- a/src/main/resources/regex.properties
+++ b/src/main/resources/regex.properties
@@ -1,6 +1,13 @@
 regex.tab1=\\t+
 regex.tab2=[ ]+<
 regex.newline=\\n+
-regex.areaAvaliacao.divResultado=<div class=\"resultados\">.*</div>
-regex.areaAvaliacao.table=<table class="table table-striped table-bordered" style="border-top: 0;">.*</table>
-regex.areaAvaliacao.tbody=<tbody>.*</tbody>
+regex.areaAvaliacao.divResultado=<div class=\"resultados\">.*?</div>
+regex.areaAvaliacao.table=<table class="table table-striped table-bordered" style="border-top: 0;">.*?</table>
+regex.areaAvaliacao.tbody=<tbody>.*?</tbody>
+regex.areaAvaliacao.tr=<tr>.*?</tr>
+regex.areaAvaliacao.trReplace=(<tr>|</tr>)
+regex.areaAvaliacao.td=<td>.*?</td>
+regex.areaAvaliacao.tdReplace=(<td>|</td>)
+regex.areaAvaliacao.href=href=\".*?\"
+regex.areaAvaliacao.hrefReplace=(href=\"|\")
+regex.areaAvaliacao.aReplace=(<a.*?>|</a>)
