Implementando o método buscarPorAreaConhecimento.

--- a/src/main/resources/regex.properties
+++ b/src/main/resources/regex.properties
@@ -10,4 +10,16 @@ regex.areaAvaliacao.td=<td>.*?</td>
 regex.areaAvaliacao.tdReplace=(<td>|</td>)
 regex.areaAvaliacao.href=href=\".*?\"
 regex.areaAvaliacao.hrefReplace=(href=\"|\")
+regex.areaAvaliacao.hrefSplit=areaAvaliacao=
 regex.areaAvaliacao.aReplace=(<a.*?>|</a>)
+regex.areaConhecimento.divResultado=<div class=\"resultados\">.*?</div>
+regex.areaConhecimento.table=<table class="table table-striped table-bordered" style="border-top: 0;">.*?</table>
+regex.areaConhecimento.tbody=<tbody>.*?</tbody>
+regex.areaConhecimento.tr=<tr>.*?</tr>
+regex.areaConhecimento.trReplace=(<tr>|</tr>)
+regex.areaConhecimento.td=<td>.*?</td>
+regex.areaConhecimento.tdReplace=(<td>|</td>)
+regex.areaConhecimento.href=href=\".*?\"
+regex.areaConhecimento.hrefReplace=(href=\"|\")
+regex.areaConhecimento.hrefSplit=areaConhecimento=
+regex.areaConhecimento.aReplace=(<a.*?>|</a>)
