--- a/src/main/resources/regex.properties
+++ b/src/main/resources/regex.properties
@@ -23,3 +23,14 @@ regex.areaConhecimento.href=href=\".*?\"
 regex.areaConhecimento.hrefReplace=(href=\"|\")
 regex.areaConhecimento.hrefSplit=areaConhecimento=
 regex.areaConhecimento.aReplace=(<a.*?>|</a>)
+regex.instituicao.divResultado=<div class=\"resultados\">.*?</div>
+regex.instituicao.table=<table class="table table-striped table-bordered" style="border-top: 0;">.*?</table>
+regex.instituicao.tbody=<tbody>.*?</tbody>
+regex.instituicao.tr=<tr>.*?</tr>
+regex.instituicao.trReplace=(<tr>|</tr>)
+regex.instituicao.td=<td>.*?</td>
+regex.instituicao.tdReplace=(<td>|</td>)
+regex.instituicao.href=href=\".*?\"
+regex.instituicao.hrefReplace=(href=\"|\")
+regex.instituicao.hrefSplit=ies=
+regex.instituicao.aReplace=(<a.*?>|</a>)
