Transferindo as regex do acrônimo para o arquivo de propriedades.

--- a/src/main/resources/regex.properties
+++ b/src/main/resources/regex.properties
@@ -34,3 +34,5 @@ regex.instituicao.href=href=\".*?\"
 regex.instituicao.hrefReplace=(href=\"|\")
 regex.instituicao.hrefSplit=ies=
 regex.instituicao.aReplace=(<a.*?>|</a>)
+regex.instituicao.acronimoSplit=( [(])
+regex.instituicao.acronimoReplace=[)]
