--- a/src/main/resources/regex.properties
+++ b/src/main/resources/regex.properties
@@ -36,3 +36,15 @@ regex.instituicao.hrefSplit=ies=
 regex.instituicao.aReplace=(<a.*?>|</a>)
 regex.instituicao.acronimoSplit=( [(])
 regex.instituicao.acronimoReplace=[)]
+regex.programa.divResultado=<div class=\"resultados\">.*?</div>
+regex.programa.table=<table class="table table-striped table-bordered" style="border-top: 0;">.*?</table>
+regex.programa.tbody=<tbody>.*?</tbody>
+regex.programa.tr=<tr>.*?</tr>
+regex.programa.trReplace=(<tr>|</tr>)
+regex.programa.td=<td>.*?</td>
+regex.programa.tdReplace=(<td>|</td>)
+regex.programa.href=href=\".*?\"
+regex.programa.hrefReplace=(href=\"|\")
+regex.programa.hrefSplit=cd_programa=
+regex.programa.aReplace=(<a.*?>|</a>)
+regex.programa.nomeSplit=( [(])
