Corrigindo o método buscarPorCurso.

--- a/src/main/resources/regex.properties
+++ b/src/main/resources/regex.properties
@@ -49,19 +49,19 @@ regex.programa.hrefSplit=cd_programa=
 regex.programa.aReplace=(<a.*?>|</a>)
 regex.programa.nomeSplit=( [(])
 regex.curso.spanReplace=(<span.*?>|</span>)
-regex.curso.spanNome=<span id=\"form:nomeProg\">.*?</span>
-regex.curso.spanSituacao=<span id=\"form:situacaoPrograma\">.*?</span>
-regex.curso.spanNivel=<span id=\"form:j_idt87:0:grauCurso\">.*?</span>
+regex.curso.spanNome=<span id=\"form:j_idt87:[0-9]+?:cursoNome\">.*?</span>
+regex.curso.spanSituacao=<span id=\"form:j_idt87:[0-9]+?:sitCurso\">.*?</span>
+regex.curso.spanNivel=<span id=\"form:j_idt87:[0-9]+?:grauCurso\">.*?</span>
 regex.curso.dataRec=<div class=\"row\"><div class=\"col-md-2\"><label class=\"control-label\">Data da Recomenda&ccedil;&atilde;o:</label></div><div class=\"col-md-10\">.*?</div></div>
 regex.curso.dataRecReplace=(<div class=\"row\"><div class=\"col-md-2\"><label class=\"control-label\">Data da Recomenda&ccedil;&atilde;o:</label></div><div class=\"col-md-10\">|</div></div>)
 regex.curso.dataIni=<div class=\"row\"><div class=\"col-md-2\"><label class=\"control-label\">Data de In&iacute;cio:</label></div><div class=\"col-md-10\">.*?</div></div>
 regex.curso.dataIniReplace=(<div class=\"row\"><div class=\"col-md-2\"><label class=\"control-label\">Data de In&iacute;cio:</label></div><div class=\"col-md-10\">|</div></div>)
 regex.curso.notaCurso=<div class=\"row\"><div class=\"col-md-2\"><label class=\"control-label\">Nota do Curso:</label></div><div class=\"col-md-10\">.*?</div></div>
 regex.curso.notaCursoReplace=(<div class=\"row\"><div class=\"col-md-2\"><label class=\"control-label\">Nota do Curso:</label></div><div class=\"col-md-10\">|</div></div>)
-regex.curso.cep=<span id="form:j_idt54:0:cep">.*?</span>
-regex.curso.logradouro=<span id="form:j_idt54:0:logradouro">.*?</span>
-regex.curso.numero=<span id="form:j_idt54:0:numEndereco">.*?</span>
-regex.curso.cidade=<span id="form:j_idt54:0:cidade">.*?</span>
-regex.curso.url=<span id="form:j_idt54:0:url">.*?</span>
+regex.curso.cep=<span id="form:j_idt54:[0-9]+?:cep">.*?</span>
+regex.curso.logradouro=<span id="form:j_idt54:[0-9]+?:logradouro">.*?</span>
+regex.curso.numero=<span id="form:j_idt54:[0-9]+?:numEndereco">.*?</span>
+regex.curso.cidade=<span id="form:j_idt54:[0-9]+?:cidade">.*?</span>
+regex.curso.url=<span id="form:j_idt54:[0-9]+?:url">.*?</span>
 regex.curso.latitude=<span class="0lat">.*?</span>
 regex.curso.longitude=<span class="0lng">.*?</span>
